# study

./: .prettierignore  README.md
EffectiveC++/: README.md
EffectiveC++/ch05/: CMakeLists.txt  test.cpp
EffectiveC++/ch07/: CMakeLists.txt  test.cpp  test2.cpp
ipc/: README.md
ipc/dbus/: CMakeLists.txt  README.md
ipc/dbus/src/: dbus_client.cpp  dbus_echo.cpp  dbus_server.cpp  dbus_test.cpp
ipc/uds/: CMakeLists.txt  README.md
ipc/uds/src/: tcp_client.cpp  tcp_server.cpp  udp_a.cpp  udp_b.cpp  udp_echo.cpp  udp_test.cpp
jekyll/: .gitignore  Gemfile  README.md  blog.html  index.html
jekyll/_layouts/: post.html
nextjs/: .gitignore  README.md
nextjs/nextjs-blog/components/: date.js  layout.js
nextjs/nextjs-blog/lib/: posts.js
nextjs/nextjs-blog/pages/: index.js
nextjs/pages/: index.js
